@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,0,50
-#define PRODUCTVER     0,3,0,50
-#define STRFILEVER     _T("0.3.0.50")
-#define STRPRODUCTVER  _T("0.3.0.50")
-#define STRPRODUCTDATE  _T("2008-02-11")
+#define FILEVER        0,3,0,54
+#define PRODUCTVER     0,3,0,54
+#define STRFILEVER     _T("0.3.0.54")
+#define STRPRODUCTVER  _T("0.3.0.54")
+#define STRPRODUCTDATE  _T("2008-02-12")
 #endif // AUTOBUILD_H
