@@ -25,14 +25,16 @@
 
 const char* NRPEPacket::getBuffer() {
 	delete [] tmpBuffer;
-	tmpBuffer = new char[getBufferLength()];
+	tmpBuffer = new char[getBufferLength()+1];
 	packet *p = reinterpret_cast<packet*>(tmpBuffer);
 	p->result_code = htons(NSCHelper::nagios2int(result_));
 	p->packet_type = htons(type_);
 	p->packet_version = htons(version_);
 	p->crc32_value = 0;
-	strncpy_s(p->buffer, 1024, strEx::wstring_to_string(payload_).c_str(), 1023);
-	p->buffer[1024] = 0;
+	if (payload_.length() >= buffer_length_)
+		throw NRPEPacketException(_T("To much data cant create return packet (truncate datat)"));
+	strncpy_s(p->buffer, buffer_length_, strEx::wstring_to_string(payload_).c_str(), buffer_length_);
+	p->buffer[buffer_length_] = 0;
 	p->crc32_value = htonl(calculate_crc32(tmpBuffer, getBufferLength()));
 	return tmpBuffer;
 }
@@ -40,7 +42,7 @@ const char* NRPEPacket::getBuffer() {
 void NRPEPacket::readFrom(const char *buffer, unsigned int length) {
 	if (buffer == NULL)
 		throw NRPEPacketException(_T("No buffer."));
-	if (length != sizeof(packet))
+	if (length != getBufferLength())
 		throw NRPEPacketException(_T("Invalid length."));
 	const packet *p = reinterpret_cast<const packet*>(buffer);
 	type_ = ntohs(p->packet_type);
@@ -52,11 +54,12 @@ void NRPEPacket::readFrom(const char *buffer, unsigned int length) {
 	crc32_ = ntohl(p->crc32_value);
 	// Verify CRC32
 	// @todo Fix this, currently we need a const buffer so we cannot change the CRC to 0.
-	char * tb = new char[getBufferLength()];
+	char * tb = new char[getBufferLength()+1];
 	memcpy(tb, buffer, getBufferLength());
 	packet *p2 = reinterpret_cast<packet*>(tb);
 	p2->crc32_value = 0;
 	calculatedCRC32_ = calculate_crc32(tb, getBufferLength());
+	p2->buffer[buffer_length_] = 0;
 	delete [] tb;
 	// Verify CRC32 end
 	result_ = NSCHelper::int2nagios(ntohs(p->result_code));
